radix-transactions/tests/assets/manifest_generator_error_instruction_not_supported_in_manifest_version_1.diag
error: unsupported instruction for this manifest version
  |
1 | YIELD_TO_PARENT;
  | ^^^^^^^^^^^^^^^^ unsupported instruction
  |